--- a/src/theme-pagarme/billing-page/properties.css
+++ b/src/theme-pagarme/billing-page/properties.css
@@ -2,10 +2,10 @@
 @import "../typography.css";
 @import "../spacing.css";
 @import "../media.css";
+@import "../margin.css";
 
 :root {
   --page-margin-desktop: var(--spacing-medium) 0 var(--spacing-medium) var(--spacing-small);
-  --page-margin-mobile: var(--spacing-medium) var(--spacing-small);
   --page-title-font-family: var(--primary-font-family);
   --page-title-font-size: var(--font-size-small);
   --page-title-color: var(--color-white);
