--- a/src/theme-pagarme/customer-page/index.css
+++ b/src/theme-pagarme/customer-page/index.css
@@ -26,5 +26,10 @@
   .title {
     display: none;
   }
+
+  .page {
+    margin-left: var(--margin-page-mobile);
+    margin-right: var(--margin-page-mobile);
+  }
 }
 
