--- a/src/theme-pagarme/payment-page/index.css
+++ b/src/theme-pagarme/payment-page/index.css
@@ -72,3 +72,11 @@
     width: 70%;
   }
 }
+
+@media (--media-palm) {
+
+  .page {
+    margin-left: var(--margin-page-mobile);
+    margin-right: var(--margin-page-mobile);
+  }
+}
